# ppam-mpi

./: .gitignore  README.html  README.md  script_clustering_by_pam.r
code/: _ReadMe  ppam.sh  script_clustering_by_pam.r  shared_CMakeLists.txt
code/data/test/: integers.txt  reals.txt  sample_byCols.csv  sample_byRows.csv
code/postprocess/: hungarian.c  visu.R
code/src/: CMakeLists.txt  main.c
code/src/Algorithm/: compute_coefficients.c  compute_coefficients.h  get_dissimilarities.c  get_dissimilarities.h  pam.c  pam.h
code/src/Classification/: _Readme  getClass.c  getClass.h
code/src/MPI_Communication/: pack.c  pack.h  unpack.c  unpack.h
code/src/MPI_Main/: master.c  master.h  slave.c  slave.h
code/src/TimeSeries/: deserialize.c  deserialize.h  serialize.c  serialize.h
code/src/Util/: rng.c  rng.h  types.h  utils.c  utils.h
code/test/: CMakeLists.txt  lut.h  main.c
code/test/Algorithm/: t.compute_coefficients.c  t.pam.c
code/test/MPI_Communication/: t.pack.c  t.unpack.c
code/test/TimeSeries/: t.deserialize.c  t.serialize.c
code/test/Util/: t.rng.c  t.utils.c
communication/short_paper/: JDS2014_short.tex
communication/slides/: 201402-JClust.tex
communication/slides/tikz/: axis.tex  axis2.tex
latex/short_paper/: JDS2014_short2.tex
latex/slides/: slides.tex
latex/slides/JdS_20140603/: slides.tex  startdoc.tex
latex/slides/JdS_20140603/tikz/: axis0.tex
